--- a/Stratos/stratos.css
+++ b/Stratos/stratos.css
@@ -1,7 +1,7 @@
 @font-face {
   font-family: "Stratos-Light-Web";
   src: url("Stratos/Stratos-Light-Web.woff2") format("woff2"),url("Stratos/Stratos-Light-Web.woff") format("woff"),url("Stratos/Stratos-Light-Web.ttf") format("truetype");
-  font-weight: normal;
+  font-weight: 400;
   font-style: normal;
 }
 
@@ -10,34 +10,34 @@ Stratos/
 @font-face {
   font-family: "Stratos-Light Italic-Web";
   src: url("Stratos/Stratos-Light Italic-Web.woff2") format("woff2"),url("Stratos/Stratos-Light Italic-Web.woff") format("woff"),url("Stratos/Stratos-Light Italic-Web.ttf") format("truetype");
-  font-weight: normal;
+  font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Stratos-Regular-Web";
   src: url("Stratos/Stratos-Regular-Web.woff2") format("woff2"),url("Stratos/Stratos-Regular-Web.woff") format("woff"),url("Stratos/Stratos-Regular-Web.ttf") format("truetype");
-  font-weight: normal;
+  font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Stratos-Medium-Web";
   src: url("Stratos/Stratos-Medium-Web.woff2") format("woff2"),url("Stratos/Stratos-Medium-Web.woff") format("woff"),url("Stratos/Stratos-Medium-Web.ttf") format("truetype");
-  font-weight: normal;
+  font-weight: 500;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Stratos-Bold-Web";
   src: url("Stratos/Stratos-Bold-Web.woff2") format("woff2"),url("Stratos/Stratos-Bold-Web.woff") format("woff"),url("Stratos/Stratos-Bold-Web.ttf") format("truetype");
-  font-weight: normal;
+  font-weight: 700;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Stratos-Black-Web";
   src: url("Stratos/Stratos-Black-Web.woff2") format("woff2"),url("Stratos/Stratos-Black-Web.woff") format("woff"),url("Stratos/Stratos-Black-Web.ttf") format("truetype");
-  font-weight: normal;
+  font-weight: 900;
   font-style: normal;
 }
